--- a/react-professional-portfolio/src/index.css
+++ b/react-professional-portfolio/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -12,14 +12,13 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-a {
+.nav-item {
   font-weight: 500;
-  color: #646cff;
+  color: #f02770;
   text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
+.nav-item:hover {
+  color: #f473a2;
 }
 
 body {
@@ -33,6 +32,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  text-shadow: 1px 1px 1px rgb(254, 126, 148);
 }
 
 button {
