--- a/react-professional-portfolio/src/index.css
+++ b/react-professional-portfolio/src/index.css
@@ -30,7 +30,15 @@ body {
 }
 
 h1 {
+  padding: 20px;
   font-size: 3.2em;
+  line-height: 1.1;
+  text-shadow: 1px 1px 1px rgb(254, 126, 148);
+}
+
+h3 {
+  padding: 5px;
+  font-size: 2.2em;
   line-height: 1.1;
   text-shadow: 1px 1px 1px rgb(254, 126, 148);
 }
